# retrieval-fairness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  notes.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: adapters.md  case_study_nq.md  comparison.md  quality_milestone_0.2.0.md  reproducibility.md
legacy/: evaluate.py  fixtures.py  poison_guard.py
retrieval_fairness/: __init__.py  __main__.py  blast_radius.py  case_run.py  cli.py  dashboard.py  demo.py  diff.py  embedders.py  gate.py  metrics.py  probe.py  provenance.py  qrels.py  serialize.py  stores.py  synth.py  types.py  validation.py
retrieval_fairness/adapters/: __init__.py  base.py  faiss.py  inmemory.py  pgvector.py  qdrant.py
scripts/: benchmark_quality.py  colab_nq_bge_encode.py  download_nq.py  probe_precomputed.py  qrels_validate.py
tests/: conftest.py  test_adapters.py  test_baseline_schema.py  test_blast_radius.py  test_cli_e2e.py  test_dashboard.py  test_diff.py  test_embedders.py  test_faiss_adapter.py  test_gate.py  test_metrics.py  test_pgvector_adapter.py  test_pgvector_security.py  test_probe.py  test_qdrant_adapter.py  test_qdrant_mock.py  test_qrels.py  test_qrels_cli.py  test_qrels_validate.py  test_quality_audit.py  test_remediation.py  test_serialize.py  test_synth.py  test_version.py
tests/fixtures/: baseline_inconsistent_report.json  baseline_v0_1_0.json  baseline_v0_1_0_missing_optional_fields.json  baseline_v0_1_1_schema_v2.json  qrels_with_zero_grades.json  queries_reordered.jsonl
