[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retrieval-fairness"
version = "0.1.1"
description = "Exposure audit for vector search / RAG: coverage, dark matter, Gini, hub capture, CI gate"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "derishabl"}]
keywords = ["rag", "vector-search", "retrieval", "fairness", "audit", "exposure", "coverage", "dark-matter", "hubness", "retrievability", "antihub"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=5",
    "ruff>=0.5",
    "build>=1",
    "twine>=5",
    "pip-audit>=2.7",
]
faiss = ["faiss-cpu>=1.7"]
pgvector = ["psycopg[binary]>=3.1"]
qdrant = ["qdrant-client>=1.7"]
models = ["sentence-transformers>=2.2"]
fastembed = ["fastembed>=0.2"]

[project.urls]
Homepage = "https://github.com/derishabl/retrieval-fairness"
Repository = "https://github.com/derishabl/retrieval-fairness"
Issues = "https://github.com/derishabl/retrieval-fairness/issues"
Documentation = "https://github.com/derishabl/retrieval-fairness#readme"
Changelog = "https://github.com/derishabl/retrieval-fairness/releases"

[project.scripts]
retrieval-fairness = "retrieval_fairness.cli:main"

[tool.setuptools.packages.find]
include = ["retrieval_fairness*"]

[tool.coverage.run]
omit = [
    "retrieval_fairness/__main__.py",
    "retrieval_fairness/case_run.py",
    "retrieval_fairness/cli.py",
    "retrieval_fairness/demo.py",
]

[tool.ruff]
target-version = "py39"
line-length = 110
extend-exclude = ["archive"]

[tool.ruff.lint]
# дефолтные E4/E7/E9/F + запрет точек с запятой уже входит (E702)
select = ["E4", "E7", "E9", "F"]
